--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.google.auto.value</groupId>
+            <artifactId>auto-value</artifactId>
+            <version>1.4.1</version>
+        </dependency>
     </dependencies>
 </project>
