--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <groupId>com.google.auto.value</groupId>
             <artifactId>auto-value</artifactId>
             <version>1.4.1</version>
+        </dependency><!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13-beta-2</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
